# engram-ai

./: .gitignore  CHANGELOG.md  CHANGES.txt  COMMERCIAL-LICENSE.md  Cargo.toml  DESIGN-unified-schema.md  LICENSE  README-zh.md  README.md  ROADMAP.md  demo.py  pyproject.toml
crates/engram-bench/: Cargo.toml
crates/engram-bench/docs/: drivers-blocked-by-pattern.md
crates/engram-bench/examples/: spreading_activation_prototype.rs
crates/engram-bench/src/: baselines.rs  lib.rs  main.rs  reporting.rs
crates/engram-bench/src/anonymizer/: mod.rs
crates/engram-bench/src/drivers/: cognitive_regression.rs  cost.rs  locomo.rs  longmemeval.rs  migration_integrity.rs  mod.rs  test_preservation.rs
crates/engram-bench/src/harness/: gates.rs  mod.rs  repro.rs
crates/engram-bench/src/scorers/: locomo.rs  longmemeval.rs  mod.rs
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: main.rs
crates/engram-cli/tests/: iss081_meta_roundtrip.rs  iss082_leading_dash.rs
crates/engramai/: Cargo.toml  README.md
crates/engramai-migrate/: Cargo.toml
crates/engramai-migrate/examples/: iss132_dump_failures.rs
crates/engramai-migrate/src/: backfill.rs  backup.rs  checkpoint.rs  cli.rs  compat.rs  error.rs  failure.rs  lib.rs  lock.rs  phase_machine.rs  preflight.rs  processor.rs  progress.rs  schema.rs
crates/engramai-migrate/tests/: compat_rollback.rs  idempotency.rs  iss044_backfill.rs  resume.rs
crates/engramai/.gid/: graph.yml  infer-preview.txt
crates/engramai/.gid/.gid-history/history/: 2026-04-17T13-44-34Z.yml
crates/engramai/.gid/docs/: architecture.md  issues-index.md  kc-pipeline.md
crates/engramai/.gid/issues/: ISS-001-fts-concurrent-corruption.md  ISS-015-clustering-upgrade-infomap.md
crates/engramai/.gid/rituals/: r-4b4577.json  r-804a9f.json
crates/engramai/examples/: basic_usage.rs  ironclaw_integration.rs  iss019_smoke_pilot.rs  iss189_probe.rs  iss201_window_verify.rs  iss203_l1_mechanism_probe.rs  iss203_prompt_ab_probe.rs  iss204_probe.rs  iss205_anchor_probe.rs  iss205_probe.rs  iss206_date_surface_probe.rs  iss207_q0_delivery_probe.rs  iss208_edges_of_probe.rs  iss215_temporal_singleval_probe.rs  kc_e2e_real.rs  locomo_conv26_baseline_v02.rs  locomo_conv26_retrieval.rs  probe_twotimer.rs  synthesis_bench.rs  t26b_triple_backfill_sample.rs  t30_phase_d_backfill_runner.rs  t30_probe_parity.rs  t30_rank_diag.rs
crates/engramai/examples/legacy/: kc_e2e_real.rs.disabled
crates/engramai/src/: anomaly.rs  anthropic_client.rs  clustering.rs  confidence.rs  config.rs  dimension_access.rs  dimensions.rs  embeddings.rs  enriched.rs  entities.rs  extractor.rs  hybrid_search.rs  lib.rs  lifecycle.rs  main.rs  memory.rs  merge_types.rs  metacognition.rs  migration_types.rs  promotion.rs  query_classifier.rs  session_wm.rs  storage.rs  store_api.rs  temporal_dim.rs  temporal_grounding.rs  triple.rs  triple_extractor.rs  turn_window.rs  type_weights.rs  types.rs  write_stats.rs
crates/engramai/src/association/: candidate.rs  former.rs  mod.rs  signals.rs
crates/engramai/src/bus/: accumulator.rs  alignment.rs  feedback.rs  mod.rs  mod_io.rs  subscriptions.rs
crates/engramai/src/compiler/: api.rs  compilation.rs  config.rs  conflict.rs  decay.rs  degradation.rs  discovery.rs  export.rs  feedback.rs  health.rs  import.rs  intake.rs  llm.rs  lock.rs  manual_edit.rs  mod.rs  privacy.rs  storage.rs  topic_lifecycle.rs  types.rs  watcher.rs
crates/engramai/src/graph/: affect.rs  audit.rs  delta.rs  edge.rs  entity.rs  error.rs  layer_classify.rs  mod.rs  schema.rs  storage_graph.rs  store.rs  telemetry.rs  test_helpers.rs  topic.rs
crates/engramai/src/interoceptive/: hub.rs  mod.rs  regulation.rs  types.rs
crates/engramai/src/knowledge_compile/: adapters.rs  candidates.rs  clusterer.rs  config.rs  metrics.rs  mod.rs  summarizer.rs  synthesis.rs  tests.rs
crates/engramai/src/models/: actr.rs  consolidation.rs  hebbian.rs
crates/engramai/src/resolution/: adapters.rs  candidate_retrieval.rs  context.rs  decision.rs  edge_decision.rs  episode.rs  fusion.rs  memory_reader.rs  mod.rs  pipeline.rs  queue.rs  reextract.rs  signals.rs  stage_edge_extract.rs  stage_extract.rs  stage_persist.rs  stage_persist_tests.rs  stats.rs  status.rs  trace.rs  worker.rs
crates/engramai/src/retrieval/: api.rs  budget.rs  dispatch.rs  explain.rs  metrics.rs  mod.rs  orchestrator.rs  outcomes.rs  ppr.rs
crates/engramai/src/retrieval/adapters/: mod.rs  (+6 more)
crates/engramai/src/substrate/: backfill.rs  mod.rs  triple_backfill.rs  types.rs  verify.rs
crates/engramai/src/synthesis/: cluster.rs  engine.rs  entity_sets.rs  gate.rs  insight.rs  mod.rs  provenance.rs  types.rs
crates/engramai/tests/: association_integration_test.rs  bus_test.rs  dedup_test.rs  dimensional_integration_test.rs  dimensions_union_proptest.proptest-regressions  dimensions_union_proptest.rs  embedding_protocol_v2.rs  entity_integration_test.rs  integration_test.rs  interoceptive_test.rs  iss019_backfill_test.rs  iss019_store_api_test.rs  iss019_update_memory_v1_upgrade.rs  iss019_v2_metadata_compat.rs  iss019_write_stats_test.rs  iss021_step_c_enqueue_test.rs  iss037_pipeline_e2e_test.rs  iss047_failure_label_allowlist_e2e.rs  iss055_pipeline_namespace_test.rs  iss056_retrieval_namespace_test.rs  iss059_retrieval_abstract_namespace_test.rs  iss064_namespace_mismatch_warn_test.rs  iss072_kind_plumbing_regression.rs  iss075_embedding_dim_smoke.rs  iss083_hybrid_downgrade_test.rs  iss087_occurred_at.rs  iss089_occurred_at_roundtrip.rs  iss098_user_metadata_through_store_raw.rs  iss103_decay_uses_wallclock_not_occurred_at.rs  iss117_canonical_hebbian.rs  iss119_contradicts_round_trip.rs  iss120_entity_kind_round_trip.rs  iss121_backfill_soft_delete.rs  iss121_soft_delete_dual_write.rs  iss122_upsert_entity_dual_write.rs  iss123_link_memory_entity_dual_write.rs  iss124_update_family_dual_write.rs  iss125_delete_embedding_dual_write.rs  iss126_hard_delete_dual_write.rs  iss127_insert_triple_entity_dual_write.rs  (+46 more)
crates/engramai/tests/legacy/: metadata_persistence_test.rs.disabled  n2n_real_data_test.rs.disabled
(+810 files in other folders)
