[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engramai"
version = "2.1.0"
description = "Neuroscience-grounded memory system for AI agents with multi-agent support, emotional feedback, and semantic search"
readme = "README.md"
authors = [
    {name = "potato", email = "potato@example.com"}
]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["ai", "memory", "agent", "cognitive", "neuroscience", "semantic-search"]
requires-python = ">=3.9"

dependencies = [
    "mcp>=0.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Embedding providers (all optional for zero-config)
sentence-transformers = ["sentence-transformers>=2.2.0"]
ollama = ["requests>=2.31.0"]
openai = ["openai>=1.0.0"]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

# All embedding providers (for testing)
all = [
    "sentence-transformers>=2.2.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tonitangpotato/engram-ai"
Documentation = "https://github.com/tonitangpotato/engram-ai#readme"
Repository = "https://github.com/tonitangpotato/engram-ai"
Issues = "https://github.com/tonitangpotato/engram-ai/issues"

[project.scripts]
engram = "engram.cli:main"

[tool.setuptools]
packages = ["engram", "engram.embeddings", "engram.stores"]

[tool.setuptools.package-data]
engram = ["py.typed"]
