[package]
name = "engramai"
version = "0.2.3"
edition = "2021"
rust-version = "1.75"
description = "Neuroscience-grounded memory system for AI agents. ACT-R activation, Hebbian learning, Ebbinghaus forgetting, cognitive consolidation."
authors = ["Toni Tang <tonitangpotato@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/tonitangpotato/engram-ai"
keywords = ["ai", "memory", "cognitive-science", "agent", "neuroscience"]
categories = ["science", "database", "algorithms"]

[dependencies]
# Core database
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
aho-corasick = "1"
anyhow = "1.0"

# Logging
log = "0.4"

# Random for interleaved replay
rand = "0.8"
regex = "1"

# HTTP client for embeddings
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Config directory detection
dirs = "5"
jieba-rs = "0.8.1"

# Unicode normalization (NFKC) for EntityKind::Other folding (graph design §3.1)
unicode-normalization = "0.1"

# String similarity (Jaro-Winkler) for s2 name_match in v0.3 resolution fusion
# (.gid/features/v03-resolution/design.md §3.4.2).
strsim = "0.11"

# BLAKE3 hashing for GraphDelta canonical hash (graph design §5bis).
blake3 = "1"

# Community detection for topic discovery
infomap-rs = { version = "0.1.1", path = "../../../infomap-rs" }

# ANN (Approximate Nearest Neighbors) for scalable topic discovery
hnsw = "0.11"
space = "0.17"
rand_core = "0.6"

[dev-dependencies]
tempfile = "3.13"
proptest = "1.5"
env_logger = "0.11"

[features]
default = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "locomo_conv26_retrieval"
path = "examples/locomo_conv26_retrieval.rs"

[lib]
name = "engramai"
path = "src/lib.rs"
